--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
-    "@progress/kendo-ui": "2020.1.115",
-    "bootstrap": "^4.4.1",
-    "@progress/kendo-grid-vue-wrapper": "2020.1.115",
-    "@progress/kendo-datasource-vue-wrapper": "2020.1.115",
     "@progress/kendo-buttons-vue-wrapper": "2020.1.115",
-    "@progress/kendo-window-vue-wrapper": "2020.1.115",
-    "@progress/kendo-inputs-vue-wrapper": "2020.1.115",
     "@progress/kendo-charts-vue-wrapper": "2020.1.115",
+    "@progress/kendo-datasource-vue-wrapper": "2020.1.115",
+    "@progress/kendo-grid-vue-wrapper": "2020.1.115",
+    "@progress/kendo-inputs-vue-wrapper": "2020.1.115",
+    "@progress/kendo-layout-vue-wrapper": "^2020.3.1118",
     "@progress/kendo-theme-bootstrap": "^2.8.0",
     "@progress/kendo-theme-default": "^2.40.2",
+    "@progress/kendo-ui": "2020.1.115",
+    "@progress/kendo-upload-vue-wrapper": "^2020.3.1118",
+    "@progress/kendo-vue-dateinputs": "^1.1.5",
+    "@progress/kendo-vue-intl": "^1.1.5",
+    "@progress/kendo-window-vue-wrapper": "2020.1.115",
     "core-js": "^3.6.5",
     "marked": "^0.3.6",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.264",
+    "@iconify/vue": "1",
     "@progress/kendo-theme-bootstrap": "^2.8.0",
     "@progress/kendo-theme-default": "^2.40.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.19.0",
+    "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0"
   }
